TRUNK-6586